clean up github integration docs

--- a/integrations/cloud-providers/overview.mdx
+++ b/integrations/cloud-providers/overview.mdx
@@ -45,7 +45,7 @@ title: Cloud Providers
       </svg>
     }
   />
-  <Card
+  {/* <Card
     horizontal
     title={<>Digital Ocean - <i>coming soon</i></>}
     icon={
@@ -60,5 +60,5 @@ title: Cloud Providers
         <path d="M75.05 199.317v-6.165h6.168v6.165zm-4.753 4.75v-4.75h4.753v4.75h-4.753zm0-4.75h-3.973v-3.97h3.973v3.97z" />
       </svg>
     }
-  />
+  /> */}
 </CardGroup>
