--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,28 +1,30 @@
 ---
-title: "Introduction"
+title: "API Introduction"
 description: |
-  Ctrlplane API reference
+  Complete reference for the Ctrlplane REST API
 ---
 
-OpenAPI (formerly known as Swagger) is a standardized specification for
-describing REST APIs. It provides a way to document API's endpoints,
-request/response formats, authentication methods, and other details in a
-machine-readable format.
+## API Overview
 
-The OpenAPI specification makes it easier to:
+The Ctrlplane API enables programmatic access to all platform functionality, allowing you to automate deployments, manage resources, and integrate with your existing tools.
 
-- Auto-generate API client libraries
-- Enable API discovery and exploration
+## API Structure
 
-Our OpenAPI specification contains detailed information about all available
-Ctrlplane API endpoints, including:
+Our API follows OpenAPI standards (formerly Swagger) with these key features:
 
-- Available HTTP methods (GET, POST, PUT, DELETE etc.)
-- Request parameters and body schemas
-- Response formats and status codes
+- **RESTful Design**: Resource-based endpoints with standard HTTP methods
+- **JSON Payloads**: Consistent request/response format
+- **Key Authentication**: Simple API key authentication
+- **Comprehensive Endpoints**: Complete coverage of platform functionality
+
+## Documentation Structure
+
+The API documentation includes:
+
+- HTTP methods (GET, POST, PUT, DELETE)
+- Required and optional parameters
+- Request/response schemas with examples
 - Authentication requirements
-- Examples and descriptions
+- Status codes and error handling
 
-View the
-[OpenAPI](https://github.com/ctrlplanedev/ctrlplane/blob/main/openapi.v1.json)
-spec.
+View the complete [OpenAPI specification](https://github.com/ctrlplanedev/ctrlplane/blob/main/openapi.v1.json) on GitHub.
