--- a/concepts/environments.mdx
+++ b/concepts/environments.mdx
@@ -1,10 +1,7 @@
 ---
 title: Environments
 description: |
-  Environments in Ctrlplane are logical groupings of resources that represent
-  distinct stages in your software deployment pipeline. They are defined at the
-  system level and play a crucial role in organizing and managing the deployment
-  process across various infrastructure components.
+  Environments are system-level resource groupings that represent distinct deployment stages (like dev, staging, production) and control how software progresses through your infrastructure.
 ---
 
 <iframe
