--- a/concepts/systems.mdx
+++ b/concepts/systems.mdx
@@ -1,10 +1,7 @@
 ---
 title: Systems
 description: |
-  Systems in Ctrlplane are the highest level of organizational units, designed to
-  group related deployments and environments together. They provide a structured
-  approach to managing complex deployment pipelines and enforcing consistency
-  across your infrastructure.
+  Systems are the highest level organizational units in Ctrlplane that group related deployments and environments together for consistent management.
 ---
 
 <iframe
