--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,17 +1,14 @@
 ---
-title: "Intro to Ctrlplane"
+title: "Introduction to Ctrlplane"
 description: |
-  Ctrlplane is an open-source deployment orchestration tool that helps you scale
-  your infrastructure.
+  Ctrlplane is an open-source deployment orchestration tool that simplifies complex infrastructure management and scaling.
 ---
 
 ## What you can do with Ctrlplane
 
-Ctrlplane is designed to streamline and automate complex deployment processes
-across diverse infrastructures, helping teams scale their operations efficiently
-and securely.
+Ctrlplane streamlines and automates complex deployment processes across diverse infrastructures, helping teams scale operations efficiently and securely.
 
-Here's an overview of Ctrlplane's key capabilities and common use cases.
+Here's what Ctrlplane offers:
 
 | Capability               | Enables you to...                                                                                                                                       |
 | :----------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------ |
