--- a/overview.mdx
+++ b/overview.mdx
@@ -1,21 +1,19 @@
 ---
 title: Overview
 description: |
-  Ctrlplane is an open-source deployment orchestration tool that 
-  helps you scale your infrastructure.
+  Ctrlplane simplifies infrastructure scaling through powerful deployment orchestration.
 ---
 
-Ctrlplane is an open-source deployment orchestration tool designed to streamline
-and manage complex deployment processes across diverse infrastructures. It
-provides a centralized platform for coordinating deployments, ensuring
-consistency, and enhancing scalability.
+Ctrlplane provides a centralized platform for coordinating deployments, ensuring consistency, and enhancing scalability across diverse infrastructures.
 
-- Integration with existing CI/CD tools
-- Advanced orchestration policies
-- Automation and synchronization of deployment activities
-- Version management
-- Environment standardization
-- Resource/CI analysis
+## Key Features
+
+- **CI/CD Integration**: Seamlessly works with your existing CI/CD pipeline
+- **Policy-Based Orchestration**: Define and enforce deployment rules
+- **Automated Workflows**: Synchronize complex deployment activities
+- **Version Control**: Track and manage software releases
+- **Environment Management**: Standardize deployment environments
+- **Resource Analysis**: Gain insights into your infrastructure
 
 ---
 
