--- a/roadmap.mdx
+++ b/roadmap.mdx
@@ -59,8 +59,8 @@ conditions, customer feedback, and technical considerations.
     icon="money-bill-trend-up"
     iconType="duotone"
   >
-    Extend infrastructure cost tracking with predictive analysis and
-    recommendations to optimize deployment costs across environments.
+    Infrastructure cost tracking with predictive analysis and recommendations to
+    optimize deployment costs across environments.
   </Card>
   <Card
     title="Self-Service Developer Portal"
@@ -132,13 +132,9 @@ conditions, customer feedback, and technical considerations.
     Enhanced release management with multiple channels (stable, beta, canary)
     and automatic promotion based on metrics and policies.
   </Card>
-  <Card
-    title="Infrastructure Cost Tracking"
-    icon="chart-pie"
-    iconType="duotone"
-  >
-    Native capabilities for tracking and reporting on deployment-related
-    infrastructure costs across environments.
+  <Card title="Deployment Analytics" icon="chart-line" iconType="duotone">
+    Advanced analytics and insights into deployment performance, success rates,
+    and trends to help teams optimize their deployment processes.
   </Card>
 </CardGroup>
 
